Serve live on port 8080

--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
     "express"
   ],
   "author": "Kris Sparks",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.16.1",
+    "express": "^4.14.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
+  }
 }
