--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "knex": "^0.12.7",
+    "pg": "^6.1.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
